trying to fix spacing, adding printing

--- a/app/styles/vanlente-comicbook.css
+++ b/app/styles/vanlente-comicbook.css
@@ -6,28 +6,32 @@
 }
 
 .cm-vlc-character {
-  display: inline-block;
+  /*display: inline-block;*/
   width: 30%;
 }
 
-.cm-vlc-action, .cm-vlc-panel {
-  display: inline-block;
-  -webkit-margin-before: 0.83em;
-  -webkit-margin-after: 0.83em;
+.cm-vlc-panel-wrapper {
+  padding-top: 0.83em !important;
+  padding-bottom: 0.83em !important;
 }
 
-.cm-vlc-character, .cm-vlc-dialogue {
-  display: inline-block;
-  -webkit-margin-after: 0.25em;
+.cm-vlc-character-wrapper, .cm-vlc-dialogue-wrapper {
+  padding-top: 0.25em !important;
+  padding-bottom: 0.25em !important;
 }
 
 .cm-vlc-panel {
   font-weight: bold;
 }
 
-.cm-vlc-dialogue {
+/*.cm-vlc-dialogue {
   display: inline-block;
   width: 70%;
   float: right;
-  /*text-indent: 8em;*/
+}
+
+.CodeMirror pre {
+    white-space: pre-wrap;
+    word-break: break-all;
+    word-wrap: break-word;
 }
